minor issues fixed
css, html and imag uploaded

--- a/about.html
+++ b/about.html
@@ -2,9 +2,39 @@
 <html lang="en">
 
 <head>
-  <title>SRGian &mdash; Websites Designed by Students</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Meta Title -->
+  <title>About - SRGian Student-Created Websites | SRG Computer Institute</title>
+
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Explore a collection of innovative websites designed by talented students at SRG Computer Institute. Browse unique web development projects showcasing creativity, technical skills, and cutting-edge design. Join us to start your web development journey today!">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords"
+    content="SRG Computer Institute, student website designs, web development projects, student portfolios, website design showcase, web design skills, student web development, learn web development, SRG Computer Institute projects">
+
+  <!-- Open Graph (for social media sharing) -->
+  <meta property="og:title" content="SRGian Student-Created Websites | SRG Computer Institute">
+  <meta property="og:description"
+    content="Discover the creative and technical web development projects by students at SRG Computer Institute. See their innovative designs and join our courses to start your web development journey!">
+  <meta property="og:image" content="https://srgian.netlify.app/images/srg-logo-white.png">
+  <meta property="og:url" content="https://srgian.netlify.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:title" content="SRGian Student-Created Websites | SRG Computer Institute">
+  <meta name="twitter:description"
+    content="Discover student-designed websites at SRG Computer Institute. View their creative portfolios and innovative projects. Start your web development journey now!">
+  <meta name="twitter:image" content="https://srgian.netlify.app/images/srg-logo-white.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
@@ -53,7 +83,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">SRGian</a></h1>
+            <!-- <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"></h1> -->
+            <a href="./index.html"><img src="./images/srg-logo-white.png" width="140px"
+                alt="SRG Computer Training Institute"></a>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -135,25 +167,19 @@
         </div>
 
         <div class="row mb-5">
-          <div class="col-md-7">
-            <img src="images/img_2.jpg" alt="Images" class="img-fluid">
+          <div class="col-md-6">
+            <img src="images/srgian.png" alt="Images" class="img-fluid">
           </div>
-          <div class="col-md-4 ml-auto">
-            <h3 class="text-white">My Mission</h3>
+          <div class="col-md-5 ml-auto">
+            <h3 class="text-white mt-4">Our Mission</h3>
             <p>At SRG Computer Institute, we help students learn important computer skills that are useful in today's
               world. We offer courses on things like creating websites, developing apps, using Excel, learning Tally for
               accounting, graphic designing, and basic computer skills. Our goal is to teach you not just theory but
               also practical skills that you can use in real-life situations. Our experienced teachers make learning fun
               and easy, using simple methods that help you understand even the most difficult topics.</p>
-            <p>We want all our students to feel confident with computers, whether they are starting from scratch or
-              looking to improve their skills. Our classrooms are designed to help you learn at your own pace and ask
-              questions when needed. At SRG Computer Institute, we believe in making computer education accessible for
-              everyone!</p>
             <p>Our mission at SRG Computer Institute is to teach students important computer skills in a simple and easy
               way. We want to help students become skilled and confident in using technology for their future jobs or
-              studies. We believe in creating a fun and supportive learning environment where every student can succeed.
-              By offering practical training and focusing on real-world knowledge, we help students build the skills
-              they need to do well in the digital world.</p>
+              studies.</p>
           </div>
         </div>
 
@@ -171,7 +197,7 @@
             </p>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
-            <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+            <img src="images/women-avatar.png" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
             <h2 class="text-white font-weight-light mb-4">Archana Rajput</h2>
             <p class="mb-4">SRG Computer Institute's Basic Computer course was perfect for me. The lessons were simple
               and easy to follow, and now I’m comfortable using computers for everyday tasks. Highly recommended!</p>
