--- a/courses.html
+++ b/courses.html
@@ -2,9 +2,39 @@
 <html lang="en">
 
 <head>
-  <title>SRGian &mdash; Websites Designed by Students</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Meta Title -->
+  <title>Courses - SRGian Student-Created Websites | SRG Computer Institute</title>
+
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Explore a collection of innovative websites designed by talented students at SRG Computer Institute. Browse unique web development projects showcasing creativity, technical skills, and cutting-edge design. Join us to start your web development journey today!">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords"
+    content="SRG Computer Institute, student website designs, web development projects, student portfolios, website design showcase, web design skills, student web development, learn web development, SRG Computer Institute projects">
+
+  <!-- Open Graph (for social media sharing) -->
+  <meta property="og:title" content="SRGian Student-Created Websites | SRG Computer Institute">
+  <meta property="og:description"
+    content="Discover the creative and technical web development projects by students at SRG Computer Institute. See their innovative designs and join our courses to start your web development journey!">
+  <meta property="og:image" content="https://srgian.netlify.app/images/srg-logo-white.png">
+  <meta property="og:url" content="https://srgian.netlify.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:title" content="SRGian Student-Created Websites | SRG Computer Institute">
+  <meta name="twitter:description"
+    content="Discover student-designed websites at SRG Computer Institute. View their creative portfolios and innovative projects. Start your web development journey now!">
+  <meta name="twitter:image" content="https://srgian.netlify.app/images/srg-logo-white.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
@@ -53,7 +83,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">SRGian</a></h1>
+            <!-- <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"></h1> -->
+            <a href="./index.html"><img src="./images/srg-logo-white.png" width="140px"
+                alt="SRG Computer Training Institute"></a>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
