--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">
-                <img src="./images/srg-logo-white.png" width="140px" alt="SRG Computer Training Institute"></a></h1>
+            <!-- <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"></h1> -->
+            <a href="./index.html"><img src="./images/srg-logo-white.png" width="140px"
+                alt="SRG Computer Training Institute"></a>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -203,7 +204,7 @@
               <a href="https://srgian.netlify.app/devansh/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
@@ -236,7 +237,7 @@
               <a href="https://srgian.netlify.app/abhishek/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
@@ -247,7 +248,7 @@
               <a href="https://srgian.netlify.app/kartik/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
@@ -258,7 +259,7 @@
               <a href="https://srgian.netlify.app/naitik/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
@@ -269,7 +270,7 @@
               <a href="https://srgian.netlify.app/himanshu/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
@@ -279,7 +280,7 @@
               <h2 class="mb-3">Blank Space</h2>
               <a href="#" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/profile-avatar.png" alt="Image" class="img-fluid">
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
