--- a/index.html
+++ b/index.html
@@ -278,7 +278,29 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Palak Singh</h2>
-              <a href="https://srgian.netlify.app/palak/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="https://srgian.netlify.app/palak/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Krish</h2>
+              <a href="https://srgian.netlify.app/krish/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Blank Space</h2>
+              <a href="#" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
