--- a/index.html
+++ b/index.html
@@ -292,15 +292,16 @@
               <a href="https://srgian.netlify.app/krish/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/krish/krishh.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Blank Space</h2>
-              <a href="#" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <h2 class="mb-3">Tanishq</h2>
+              <a href="https://srgian.netlify.app/tanishq/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
