--- a/index.html
+++ b/index.html
@@ -155,6 +155,17 @@
       <div class="row">
         <div class="col-sm-6 col-sm-6 col-md-4 col-lg-3">
 
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="image-wrap-2">
+              <div class="image-info">
+                <h2 class="mb-3">Palak Singh</h2>
+                <a href="https://srgian.netlify.app/palak/" target="_blank"
+                  class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              </div>
+              <img src="https://srgian.netlify.app/palak/palak-selfie.png" alt="Palak Profile Image" class="img-fluid">
+            </div>
+          </div>
+
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Raavi</h2>
@@ -268,17 +279,6 @@
             <div class="image-info">
               <h2 class="mb-3">Himanshu</h2>
               <a href="https://srgian.netlify.app/himanshu/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
-            </div>
-            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Palak Singh</h2>
-              <a href="https://srgian.netlify.app/palak/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
