--- a/index.html
+++ b/index.html
@@ -215,11 +215,22 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Devansh</h2>
-              <a href="https://srgian.netlify.app/devansh/" target="_blank"
+              <h2 class="mb-3">Krish</h2>
+              <a href="https://srgian.netlify.app/krish/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/krish/krishh.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Tanishq</h2>
+              <a href="https://srgian.netlify.app/tanishq/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./tanishq/tanishq.png" alt="Tanishq Image" class="img-fluid">
           </div>
         </div>
 
@@ -244,6 +255,21 @@
             <img src="https://srgian.netlify.app/mayank/FB_IMG_1698990087056.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Devansh</h2>
+              <a href="https://srgian.netlify.app/devansh/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+
+
+
 
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
@@ -283,28 +309,6 @@
             <div class="image-info">
               <h2 class="mb-3">Himanshu</h2>
               <a href="https://srgian.netlify.app/himanshu/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
-            </div>
-            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Krish</h2>
-              <a href="https://srgian.netlify.app/krish/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
-            </div>
-            <img src="https://srgian.netlify.app/krish/krishh.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Tanishq</h2>
-              <a href="https://srgian.netlify.app/tanishq/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
