--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               <h2 class="mb-3">Babita Sharma</h2>
               <a href="https://srgian.netlify.app/babita/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/babita/babitaProfileImage.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
