Profile image updated

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <a href="https://srgian.netlify.app/babita/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgian.netlify.app/babita/babitaProfileImage.png" style="width: 368px; height: 367px;object-fit: cover;" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Image" style="object-fit: cover;" "img-fluid">
           </div>
         </div>
 
