--- a/index.html
+++ b/index.html
@@ -326,6 +326,17 @@
           </div>
         </div>
 
+         <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Khushi Gupta</h2>
+              <a href="https://srgian.netlify.app/khushi/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/man-avatar.png" alt="Image" style="object-fit: cover;" "img-fluid">
+          </div>
+        </div>
+
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
