--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
               <a href="https://srgian.netlify.app/babita/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Image" style="object-fit: cover;" "img-fluid">
+            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Khushi Gupta</h2>
@@ -335,6 +335,18 @@
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Piyush</h2>
+              <a href="https://srgian.netlify.app/piyush/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgian.netlify.app/piyush/piyush-selfie-square.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
 
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
