piyush favicon updated

--- a/piyush/index.html
+++ b/piyush/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Piyush Portfolio | Under the Guideness of SRG Computer Institute</title>
     <link rel="stylesheet" href=./style.css>
-    <link rel="shortcut icon" href="./piyush-selfie.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./piyush-selfie-square.png" type="image/x-icon">
 </head>
 
 <body>
