minor update alignment

--- a/index.html
+++ b/index.html
@@ -259,6 +259,27 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
+              <h2 class="mb-3">Babita</h2>
+              <a href="https://srgian.netlify.app/babita/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Piyush</h2>
+              <a href="/piyush" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgian.netlify.app/piyush/piyush-selfie-square.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
               <h2 class="mb-3">Devansh</h2>
               <a href="https://srgian.netlify.app/devansh/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
@@ -266,10 +287,6 @@
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
-
-
-
-
 
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
@@ -315,16 +332,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Babita Sharma</h2>
-              <a href="https://srgian.netlify.app/babita/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
-            </div>
-            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
+
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
@@ -335,18 +343,6 @@
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
         </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="image-wrap-2">
-            <div class="image-info">
-              <h2 class="mb-3">Piyush</h2>
-              <a href="https://srgian.netlify.app/piyush/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
-            </div>
-            <img src="https://srgian.netlify.app/piyush/piyush-selfie-square.png" alt="Image" class="img-fluid">
-          </div>
-        </div>
-
 
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
