--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <a href="https://srgian.netlify.app/babita/" target="_blank"
                 class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
-            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Image" class="img-fluid">
+            <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Babita Photo" class="img-fluid">
           </div>
         </div>
 
