href link update for each students

--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Palak Singh</h2>
-              <a href="https://srgian.netlify.app/palak/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/palak/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="https://srgian.netlify.app/palak/palak-selfie.png" alt="Palak Profile Image" class="img-fluid">
           </div>
@@ -171,8 +170,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Raavi</h2>
-              <a href="https://srgian.netlify.app/raavi/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="/raavi/" target="_blank" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/raavi/image.jpeg" alt="Raavi" class="img-fluid">
           </div>
@@ -184,8 +182,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Madhu</h2>
-              <a href="https://srgian.netlify.app/madhu/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="/madhu/" target="_blank" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/madhu/doll-madhu.jpg" alt="Madhu" class="img-fluid">
           </div>
@@ -194,8 +191,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Beauty</h2>
-              <a href="https://srgian.netlify.app/beauty" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="/beauty" target="_blank" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/beauty/beauty.jpg" alt="Beauty" class="img-fluid">
           </div>
@@ -205,8 +201,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Rakhi</h2>
-              <a href="https://srgian.netlify.app/rakhi/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Portfolio</a>
+              <a href="/rakhi/" target="_blank" class="btn btn-outline-white py-2 px-4">Portfolio</a>
             </div>
             <img src="https://srgian.netlify.app/rakhi/srg-girl.jpg" alt="Rakhi" class="img-fluid">
           </div>
@@ -216,8 +211,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Krish</h2>
-              <a href="https://srgian.netlify.app/krish/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/krish/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="https://srgian.netlify.app/krish/krishh.jpg" alt="Image" class="img-fluid">
           </div>
@@ -227,8 +221,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Tanishq</h2>
-              <a href="https://srgian.netlify.app/tanishq/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/tanishq/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./tanishq/tanishq.png" alt="Tanishq Image" class="img-fluid">
           </div>
@@ -238,8 +231,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Suraj</h2>
-              <a href="https://srgian.netlify.app/suraj/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/suraj/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="https://srgian.netlify.app/suraj/image.jpg" alt="Image" class="img-fluid">
           </div>
@@ -249,8 +241,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Mayank</h2>
-              <a href="https://srgian.netlify.app/mayank/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/mayank/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="https://srgian.netlify.app/mayank/FB_IMG_1698990087056.jpg" alt="Image" class="img-fluid">
           </div>
@@ -260,8 +251,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Babita</h2>
-              <a href="https://srgian.netlify.app/babita/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/babita/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="https://srgian.netlify.app/babita/babitaProfileImage.jpg" alt="Babita Photo" class="img-fluid">
           </div>
@@ -281,8 +271,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Devansh</h2>
-              <a href="https://srgian.netlify.app/devansh/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/devansh/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
@@ -292,8 +281,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Abhishek</h2>
-              <a href="https://srgian.netlify.app/abhishek/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/abhishek/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
@@ -303,8 +291,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Kartik</h2>
-              <a href="https://srgian.netlify.app/kartik/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/kartik/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
@@ -314,8 +301,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Naitik</h2>
-              <a href="https://srgian.netlify.app/naitik/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/naitik/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
@@ -325,8 +311,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Himanshu</h2>
-              <a href="https://srgian.netlify.app/himanshu/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/himanshu/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
@@ -337,8 +322,7 @@
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3">Khushi Gupta</h2>
-              <a href="https://srgian.netlify.app/khushi/" target="_blank"
-                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+              <a href="/khushi/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
