pari, ragini, avya portfolio project added

--- a/index.html
+++ b/index.html
@@ -157,6 +157,38 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="image-wrap-2">
             <div class="image-info">
+              <h2 class="mb-3">Parineeta</h2>
+              <a href="https://parineeta.netlify.app/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgian.netlify.app/images/pari.jpg" alt="Parineeta" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Ragini</h2>
+              <a href="https://raginidubey1.netlify.app/" target="_blank"
+                class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://srgian.netlify.app/images/ragini.jpg" alt="Ragini" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Avya</h2>
+              <a href="https://avya1.netlify.app/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="https://avya1.netlify.app/6.jpg" alt="Avya" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
               <h2 class="mb-3">Palak Singh</h2>
               <a href="/palak/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
@@ -323,6 +355,26 @@
             <div class="image-info">
               <h2 class="mb-3">Khushi Gupta</h2>
               <a href="/khushi/" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Blank Space</h2>
+              <a href="#" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
+            </div>
+            <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="image-wrap-2">
+            <div class="image-info">
+              <h2 class="mb-3">Blank Space</h2>
+              <a href="#" target="_blank" class="btn btn-outline-white py-2 px-4">Poftfolio</a>
             </div>
             <img src="./images/man-avatar.png" alt="Image" class="img-fluid">
           </div>
